crates/eml_cli/tests/snapshots/integration__ui__run@files__drop_file.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/files/drop_file.em
---
--- stdout ---
dropped
--- stderr ---
