crates/eml_cli/tests/snapshots/integration__ui__run@files__file_in_data.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/files/file_in_data.em
---
--- stdout ---
input: hello from a file
--- stderr ---
