crates/eml_cli/tests/snapshots/integration__ui__run@files__files_in_a_list.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/files/files_in_a_list.em
---
--- stdout ---
closed two
--- stderr ---
