crates/eml_cli/tests/snapshots/integration__ui__run@files__state_released_on_abort.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/files/state_released_on_abort.em
---
--- stdout ---
aborted
--- stderr ---
